--- a/GetCloserBackend/src/main/resources/application.properties
+++ b/GetCloserBackend/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 
+
+#Server configuration
+server.servlet.context-path=/Well
+server.port=8084
+
+### DATABASE ###
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/GetCloser?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+### JPA / HIBERNATE ###
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.main.allow-bean-definition-overriding=true
+
+#logging configuration
+logging.level.org.springframework=WARN
+logging.level.com.zaxxer.hikari=WARN
+logging.level.root=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{36} - %msg%n
