--- a/Pidev - backend/src/main/resources/application.properties
+++ b/Pidev - backend/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=willbieng7@gmail.com
+spring.mail.password=vaopxgcbdderiuml
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.smtp.starttls.enable=true
+
