--- a/Pidev - backend/pom.xml
+++ b/Pidev - backend/pom.xml
@@ -68,12 +68,28 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
-        <!-->multipartfile </!-->
+
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
+        <!--> meteo</!-->
+        <dependency>
+            <groupId>com.github.prominence</groupId>
+            <artifactId>openweathermap-api</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
+        <!--> stripe </!-->
+        <!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>20.97.0</version>
+        </dependency>
+
+
 
 
     </dependencies>
