--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8088
 
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/QuizzFil?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/QuizzFilNouv?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
